# gpt-and-i

./: .gitignore  README.md  data_reformat.py  gen-ver-theory.py  graph_generation.py  prompt_generation.py  pyproject.toml  requirements.txt  response_evaluation.py  response_generation.py
LLMs-Planning/llm_planning_analysis/: back_prompting_csp.py
csp_solver/: csp.py  test_map_coloring.py  test_n_queens.py
data/: dupe_check.py
data/color_verification/: instance-103.col  instance-111.col  instance-113.col  instance-114.col  instance-118.col  instance-123.col  instance-124.col  instance-135.col  instance-137.col  instance-138.col  instance-139.col  instance-152.col  instance-156.col  instance-168.col  instance-174.col  instance-176.col  instance-18.col  instance-181.col  instance-182.col  instance-184.col  instance-19.col  instance-191.col  instance-192.col  instance-196.col  instance-198.col  instance-199.col  instance-200.col  instance-201.col  instance-211.col  instance-213.col  instance-215.col  instance-30.col  instance-34.col  instance-35.col  instance-37.col  instance-48.col  instance-51.col  (+13 more)
domain_utils/: color_verification.py  game24.py  graph_coloring.py
gpt-and-i/: evaluate_responses.py  generate_prompts.py  query_llm.py  utils.py
llm-csp/: check_random_sampling.py  cnf_convert.py  data_reformat_verification.py  prompt_generation.py  quick_run.sh  requirements.txt  response_evaluation.py  response_generation.py  response_parse_cnf.py  stats.json  stats_generation.py
scripts/: bulk_basic_stats.py  edit_top_to_stop.py  gen-ver-theory.py
(+37291 files in other folders)
