[tool.poetry]
name = "gpt-and-i"
version = "0.1.0"
description = "Pipeline for testing self-verification abilities of LLMs on reasoning domains"
authors = ["kstechly <kstechly@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.47.0"
fire = "^0.6.0"
rich = "^13.8.1"
grinpy = "^19.7a0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
sympy = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
